--- a/Keras-Minst-Handwriting.ipynb
+++ b/Keras-Minst-Handwriting.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Perceptron.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOBL2rwEUIRR8xvoDeyWJaC",
+      "authorship_tag": "ABX9TyP2RgqD9ab3fCAKf7BP0Pe8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Import the Google Tensorflow libraries\n",
         "import tensorflow as tf\n",
         "import tensorflow_datasets as tfds"
       ],
@@ -39,6 +40,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Load the Minst Digit Handwriting dataset\n",
         "(ds_train, ds_test), ds_info = tfds.load(\n",
         "    'mnist',\n",
         "    split=['train', 'test'],\n",
@@ -46,19 +48,19 @@
         "    as_supervised=True,\n",
         "    with_info=True,\n",
         ")\n",
-        "\n",
-        "#printing the shapes of the vectors\n",
+        "# Printthe shapes of the vectors\n",
+        "# (Should be 60000/10000 28x28 images)\n",
         "print('X_train: ' + str(train_X.shape))\n",
         "print('Y_train: ' + str(train_y.shape))\n",
         "print('X_test:  '  + str(test_X.shape))\n",
         "print('Y_test:  '  + str(test_y.shape))"
       ],
       "metadata": {
-        "id": "XcLkpgde_qgl",
-        "outputId": "56f57dd1-b57f-4bb5-b1e0-d5abbf20a1d5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XcLkpgde_qgl",
+        "outputId": "56f57dd1-b57f-4bb5-b1e0-d5abbf20a1d5"
       },
       "execution_count": 69,
       "outputs": [
@@ -77,6 +79,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Display the first 20 images of the training dataset\n",
         "import matplotlib.pyplot as plt\n",
         "fig = plt.figure(figsize=(6, 6))\n",
         "fig.subplots_adjust(left=0, right=1, bottom=0, top=1, hspace=0.05, wspace=0.05)\n",
@@ -88,12 +91,12 @@
         "    ax.text(0, 7, str(train_y[i]))"
       ],
       "metadata": {
-        "id": "FSJ4sQKH_hh9",
-        "outputId": "f83f6c72-6d7c-470e-df2a-9938f360e828",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 515
-        }
+        },
+        "id": "FSJ4sQKH_hh9",
+        "outputId": "f83f6c72-6d7c-470e-df2a-9938f360e828"
       },
       "execution_count": 70,
       "outputs": [
@@ -112,14 +115,19 @@
     {
       "cell_type": "code",
       "source": [
+        "# Normalise the images\n",
         "def normalize_img(image, label):\n",
         "  \"\"\"Normalizes images: `uint8` -> `float32`.\"\"\"\n",
         "  return tf.cast(image, tf.float32) / 255., label\n",
         "\n",
+        "# Build a map between the training feature images and target class\n",
         "ds_train = ds_train.map(\n",
         "    normalize_img, num_parallel_calls=tf.data.AUTOTUNE)\n",
+        "# Cache the training dataset\n",
         "ds_train = ds_train.cache()\n",
+        "# Shuffle the dataset\n",
         "ds_train = ds_train.shuffle(ds_info.splits['train'].num_examples)\n",
+        "# Set a batch size for training at 128 images\n",
         "ds_train = ds_train.batch(128)\n",
         "ds_train = ds_train.prefetch(tf.data.AUTOTUNE)"
       ],
@@ -132,6 +140,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Build a map between the training feature images and target class\n",
         "ds_test = ds_test.map(\n",
         "    normalize_img, num_parallel_calls=tf.data.AUTOTUNE)\n",
         "ds_test = ds_test.batch(128)\n",
@@ -147,17 +156,19 @@
     {
       "cell_type": "code",
       "source": [
+        "# Define the Neural Network architecture\n",
         "model = tf.keras.models.Sequential([\n",
         "  tf.keras.layers.Flatten(input_shape=(28, 28)),\n",
         "  tf.keras.layers.Dense(128, activation='relu'),\n",
         "  tf.keras.layers.Dense(10)\n",
         "])\n",
+        "# Compile\n",
         "model.compile(\n",
         "    optimizer=tf.keras.optimizers.Adam(0.001),\n",
         "    loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
         "    metrics=[tf.keras.metrics.SparseCategoricalAccuracy()],\n",
         ")\n",
-        "\n",
+        "# Fit and train the model and retain the model history\n",
         "model_history = model.fit(\n",
         "    ds_train,\n",
         "    epochs=6,\n",
@@ -165,11 +176,11 @@
         ")"
       ],
       "metadata": {
-        "id": "lO2GFuvCCXEk",
-        "outputId": "b2a46e89-26d7-4791-f6c9-60b01aa07926",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lO2GFuvCCXEk",
+        "outputId": "b2a46e89-26d7-4791-f6c9-60b01aa07926"
       },
       "execution_count": 73,
       "outputs": [
@@ -196,14 +207,15 @@
     {
       "cell_type": "code",
       "source": [
+        "# Display the Neural Network architecture and sizes\n",
         "print(model.summary())"
       ],
       "metadata": {
-        "id": "S2x5ebvICmPk",
-        "outputId": "8492f360-6d07-4db4-ed77-fd97a3572942",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "S2x5ebvICmPk",
+        "outputId": "8492f360-6d07-4db4-ed77-fd97a3572942"
       },
       "execution_count": 74,
       "outputs": [
@@ -234,16 +246,17 @@
     {
       "cell_type": "code",
       "source": [
+        "# Display the Neural Network as a diagram\n",
         "from keras.utils.vis_utils import plot_model\n",
         "plot_model(model, to_file='model_plot.png', show_shapes=True, show_layer_names=True)"
       ],
       "metadata": {
-        "id": "j4xc8bonC00t",
-        "outputId": "188a31b1-7f9d-41ec-d953-b92685c5ba00",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 422
-        }
+        },
+        "id": "j4xc8bonC00t",
+        "outputId": "188a31b1-7f9d-41ec-d953-b92685c5ba00"
       },
       "execution_count": 75,
       "outputs": [
@@ -263,14 +276,15 @@
     {
       "cell_type": "code",
       "source": [
+        "# Display the loss and metrics of the model\n",
         "loss_and_metrics = model.evaluate(test_X, test_y, verbose=2)"
       ],
       "metadata": {
-        "id": "4w7C54PHDSt0",
-        "outputId": "2343234b-fc38-4ef2-ff56-9bb22ac15801",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4w7C54PHDSt0",
+        "outputId": "2343234b-fc38-4ef2-ff56-9bb22ac15801"
       },
       "execution_count": 76,
       "outputs": [
@@ -286,6 +300,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Display the test images\n",
         "fig = plt.figure(figsize=(6, 6))\n",
         "fig.subplots_adjust(left=0, right=1, bottom=0, top=1, hspace=0.05, wspace=0.05)\n",
         "for i in range(20):\n",
@@ -295,12 +310,12 @@
         "    ax.text(0, 7, str(test_y[i]))"
       ],
       "metadata": {
-        "id": "NqcU5D4mIeAz",
-        "outputId": "3bb34337-dea5-4a3b-f9a2-a662b7959a14",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 515
-        }
+        },
+        "id": "NqcU5D4mIeAz",
+        "outputId": "3bb34337-dea5-4a3b-f9a2-a662b7959a14"
       },
       "execution_count": 77,
       "outputs": [
@@ -323,11 +338,11 @@
         "predictions = model.predict([test_X])"
       ],
       "metadata": {
-        "id": "26e5ui5vQjSX",
-        "outputId": "b00fe8d0-ddba-452a-d202-a909b0566596",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "26e5ui5vQjSX",
+        "outputId": "b00fe8d0-ddba-452a-d202-a909b0566596"
       },
       "execution_count": 78,
       "outputs": [
@@ -351,12 +366,12 @@
         "ax.imshow(test_X[0], cmap=plt.cm.binary, interpolation='nearest')"
       ],
       "metadata": {
-        "id": "5XuSYu1ETmC8",
-        "outputId": "93c4e1db-f9f1-4cc0-db81-96b7a52ebd9e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 169
-        }
+        },
+        "id": "5XuSYu1ETmC8",
+        "outputId": "93c4e1db-f9f1-4cc0-db81-96b7a52ebd9e"
       },
       "execution_count": 79,
       "outputs": [
@@ -390,11 +405,11 @@
         "np.argmax(predictions[0])"
       ],
       "metadata": {
-        "id": "WqUFppo4YZUL",
-        "outputId": "873fa16d-b5db-4f54-9d5c-afbd6334ff8c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WqUFppo4YZUL",
+        "outputId": "873fa16d-b5db-4f54-9d5c-afbd6334ff8c"
       },
       "execution_count": 80,
       "outputs": [
@@ -409,6 +424,18 @@
           "execution_count": 80
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Persist the model to support, for example, an API service\n",
+        "model.save('./minst-digits.keras')"
+      ],
+      "metadata": {
+        "id": "R7KsXIvrbqgT"
+      },
+      "execution_count": 81,
+      "outputs": []
     }
   ]
 }
